--- a/less/content.less
+++ b/less/content.less
@@ -108,7 +108,7 @@ ul {
         }
 
         li {
-          .make-xs-column(12);
+          .make-xs-column(6);
           .make-sm-column(3);
           .make-md-column(12/7);
 
@@ -121,6 +121,7 @@ ul {
           }
 
           a {
+            padding: 0;
             line-height: (2 * @line-height-computed);
             text-align: center;
 
@@ -131,8 +132,26 @@ ul {
             @media (min-width: @screen-sm-min) {
               background: wheat;
               padding: (2 * @line-height-computed) 0;
+            }
+            @media (min-width: @screen-lg-min) {
               font-size: @font-size-h3;
             }
+          }
+        }
+
+        li:nth-child(odd) {
+          // Mobile:
+            padding-right: 0;
+          @media (min-width: @screen-sm-min) {
+            padding-right: floor(@grid-gutter-width / 2);
+          }
+        }
+
+        li:nth-child(even) {
+          // Mobile:
+            padding-left: 0;
+          @media (min-width: @screen-sm-min) {
+            padding-left: floor(@grid-gutter-width / 2);
           }
         }
       }
