--- a/less/header.less
+++ b/less/header.less
@@ -119,7 +119,7 @@
     z-index: -1;
 
     // Mobile:
-      height: (28 * @line-height-computed);
+      height: (25 * @line-height-computed);
     @media (min-width: @screen-sm-min) {
       height: (26 * @line-height-computed);
     }
